--- a/materials.css
+++ b/materials.css
@@ -35,3 +35,8 @@
   float: right;
   margin-bottom: 12px;
 }
+
+#materialsModal .displayName-input,
+#materialsModal .supplier-input {
+  width: 220px;
+}
